SQuirreL SQL Client Change Log
==============================

Not yet released - available in the latest snapshot, or at least checked into CVS.
=========

    New Features/Enhancements:
    
Derby Plugin: A new plugin which allows the user to view source for triggers and
views.  Also, detailed information about triggers is available.

Informix Plugin: A new plugin which allows the user to view source for stored 
procedure, trigger and view objects. Also provides Informix-specific details 
for indexes and triggers.  Special thanks goes to Doug Lawry for help setting 
up an Informix instance for developing the plugin, and providing the system 
catalog queries necessary for the object information provided by this plugin.

Refactoring Plugin: A new plugin which currently allows users to alter
tables by adding, modifying and dropping columns as well as adding/dropping 
Primary Keys.  Uses an extended Hibernate dialect framework to derive SQL which 
is syntactically correct for the database being modified.

Made SQuirreL work with hxtt drivers. See www.hxtt.com. Thanks to Yonghong Zhao 
the patches.

Oracle Plugin:
   Windows for
    - DB Output, 
    - Session Info,
    - SGA Trace,
    - Invalid Objects
   were changed in the following ways:
   - Tool bar buttons are not in the main frame tool bar any more but in the 
     Session tool bar.
   - Each window has its own tool bar icon.
   - All windows restore their last size and position.
   - All windows provide a "Stay on top" check box.

Syntax plugin: Corrections/Abreviations allow new lines. Use \n to create a 
new line. Note: Bookmarks are more powerful than abreviations.

SQuirreL paths (-home, -user) are shown in Global Preferences

LAF Plugin: Added Napkin Look and Feel (JDK 1.5 only)

Completion Popup (Code Completion ctrl+space, Tools Popup ctrl+t, 
Bookmarks Popup ctrl+j): When the beginning/end of the pop up list is reached 
another arrow up/down jumps to the last/first entry. 
